<resources>
    <string name="app_name">Red Book</string>
    <string name="title_audioguide">Аудиогид</string>
    <string name="title_excursion">Экскурсии</string>
    <string name="title_moodguide">Гид по настроению</string>
    <string name="choose_place">Выбор подкаста</string>
    <string name="place">Подкаст</string>
    <string name="excursion_ready">Готовые</string>
    <string name="excursion_near">Поймать маршрут</string>
    <string name="excursion_create">Создать</string>
    <string name="recognize_text_in_progress">Распознавание речи…</string>
    <string name="recognize_tip">Для перехода к категории или месту скажите: \"[Место|Категория] [Название]\"</string>
    <string name="recognize_error">Речь не распознана</string>
    <string name="recognize_error_place">Не удалось найти место</string>
    <string name="recognize_error_category">Не удалось найти категорию</string>
    <string name="recognize_category">Найдена категория %1$s</string>
    <string name="recognize_place">Найдено место %1$s</string>
</resources>