<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_audioguide">

    <fragment
        android:id="@+id/navigation_audioguide"
        android:name="com.begletsov.redbook.ui.audioguide.AudioguideFragment"
        android:label="@string/title_audioguide"
        tools:layout="@layout/fragment_audioguide" >
        <action
            android:id="@+id/action_navigation_audioguide_to_navigation_choose_place"
            app:destination="@id/navigation_choose_place" />
    </fragment>

    <fragment
        android:id="@+id/navigation_excursion"
        android:name="com.begletsov.redbook.ui.excursion.ExcursionFragment"
        android:label="@string/title_excursion"
        tools:layout="@layout/fragment_excursion" />

    <fragment
        android:id="@+id/navigation_moodguide"
        android:name="com.begletsov.redbook.ui.moodguide.MoodguideFragment"
        android:label="@string/title_moodguide"
        tools:layout="@layout/fragment_moodguide" />

    <fragment
        android:id="@+id/navigation_choose_place"
        android:name="com.begletsov.redbook.ui.audioguide.ChoosePlaceFragment"
        android:label="@string/choose_place"
        tools:layout="@layout/fragment_choose_place" >
        <action
            android:id="@+id/action_navigation_choose_place_pop"
            app:popUpTo="@id/navigation_choose_place"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_choose_place_to_navigation_place"
            app:destination="@id/navigation_place" />
    </fragment>

    <fragment
        android:id="@+id/navigation_place"
        android:name="com.begletsov.redbook.ui.audioguide.PlaceFragment"
        android:label="@string/place"
        tools:layout="@layout/fragment_place" >
        <action
            android:id="@+id/action_navigation_choose_place_pop"
            app:popUpTo="@id/navigation_choose_place"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_place_pop"
            app:popUpTo="@id/navigation_place"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>